# RustGameSample1

./: .gitignore  Agents.md  TROUBLESHOOTING.md  _codex_env.ps1  history.md
realgeopolitics/: ARCHITECTURE_SPLIT_PLAN.md  Cargo.toml  GEO_SIM_ROADMAP.md  README.md  coverage.ps1
realgeopolitics/.cargo/: config.toml
realgeopolitics/cli/: Cargo.toml
realgeopolitics/cli/src/: cli.rs  main.rs
realgeopolitics/cli/src/cli/commands/: mod.rs
realgeopolitics/config/: countries.json
realgeopolitics/config/events/: debt_crisis.yaml  resource_boom.json
realgeopolitics/config/industries/: energy.yaml  primary.yaml  secondary.yaml  tertiary.yaml
realgeopolitics/core/: Cargo.toml
realgeopolitics/core/src/: game.rs  lib.rs  scheduler.rs  time.rs
realgeopolitics/core/src/game/: bootstrap.rs  constants.rs  country.rs  economy.rs  event_templates.rs  industry.rs  market.rs  mod.rs  state.rs  time.rs
realgeopolitics/core/src/game/economy/: industry.rs
realgeopolitics/core/src/game/economy/industry/: catalog.rs  effects.rs  metrics.rs  mod.rs  model.rs  registry.rs  reporter.rs  runtime.rs
realgeopolitics/core/src/game/event_templates/: compiler.rs  engine.rs  formatter.rs  loader.rs  mod.rs
realgeopolitics/core/src/game/event_templates/condition/: mod.rs  parser.rs
realgeopolitics/core/src/game/systems/: diplomacy.rs  events.rs  facade.rs  fiscal.rs  mod.rs  policy.rs  tasks.rs
realgeopolitics/metrics/complexity/: summary.json
realgeopolitics/metrics/complexity/cli/src/: cli.rs.json  main.rs.json
realgeopolitics/metrics/complexity/core/src/: lib.rs.json  scheduler.rs.json  time.rs.json
realgeopolitics/metrics/complexity/core/src/game/: bootstrap.rs.json  constants.rs.json  country.rs.json  (+7 more)
realgeopolitics/metrics/complexity/web/src/: lib.rs.json
realgeopolitics/src/: cli.rs  game.rs  main.rs
realgeopolitics/tools/: code_complexity.ps1  code_metrics.ps1
realgeopolitics/web/: Cargo.toml  index.html
realgeopolitics/web/src/: lib.rs
wasm-game/: Cargo.toml  README.md  index.html
wasm-game/src/: lib.rs
(+19 files in other folders)
