[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "web"
]
default-members = ["cli"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-utils = "0.2"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement", "EventTarget"] }
wasm-bindgen-test = "0.3"
