[package]
name = "realgeopolitics-web"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
realgeopolitics-core = { path = "../core" }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
gloo-timers = { workspace = true }
yew = { workspace = true }
